--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Enquetes",
-  "description": "Enquetes for favorite foods.",
-  "repository": "https://github.com/progedu/node-js-http-3016",
+  "name": "",
+  "description": "",
+  "repository": "https://github.com/naoki-kurishita/kuri-bot2",
   "logo": "",
   "keywords": ["node"],
   "image": "heroku/nodejs"
